17th Notebook file

--- a/PythonJupyterNotebooks/17-June-2019.ipynb
+++ b/PythonJupyterNotebooks/17-June-2019.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
     "    digitCount = 0\n",
     "    engCount = 0\n",
     "    for i in s:\n",
-    "        if i.isdigit():\n",
+    "        if (ord(i) >= 48 and ord(i) <= 57):\n",
     "            digitCount += 1\n",
     "        elif (ord(i) >= 97 and ord(i) <= 122) or (ord(i) >= 65 and ord(i) <= 90):\n",
     "            engCount += 1\n",
@@ -125,28 +125,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 3, 2, 1, 0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def highestRemainder(n):\n",
-    "    maxR = 0\n",
+    "    hr = []\n",
     "    for i in range(1,n+1):\n",
-    "        if n % i > maxR:\n",
-    "            maxR = n%i\n",
-    "    if maxR < n:\n",
-    "        return maxR\n",
+    "        hr.append(n%i)\n",
+    "    m = max(hr)\n",
+    "    return hr.index(m)+1\n",
     "highestRemainder(7)              "
    ]
   },
